--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zoohairdev.github.io/my-portfolio",
+  "homepage": "http://zoohairdev.github.io/my-portfolio/",
   "name": "react-portfolio-website",
   "version": "0.1.0",
   "private": true,
